[package]
name = "user"
version = "0.1.0"
authors = ["Deepankar01 <deepankar01agrawal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
async-graphql = "3.0.38"
chrono = "0.4.19"
chrono-tz = "0.6.1"
async-graphql-axum = "3.0.38"
hyper = "0.14.18"
axum = { version = "0.5.1", features = ["headers"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }